--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -101,8 +101,6 @@
   .container
     &__types, &__project 
       width: 90%
-  .project
-    background-color: $fourthdary
   .section-title
     &__heading
       font-size: 1.84rem
@@ -155,6 +153,7 @@
     &__card
       padding-top: 1.65rem      
   .project
+    background-color: $fourthdary
     &__card
       margin-bottom: 5.65rem
       &--text
