--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -51,7 +51,7 @@ img
     max-width: 23.6rem
     margin: 0 auto
     margin-top: -9.5rem
-    padding: 1.79rem 2.14rem
+    padding: 1.78rem 2.07rem 2rem 2.1rem
     background-color: #ffffff
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
   &__title
